# testBotPandas

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: constants.py  db.py  links.db  main.py  test.py
src/document/: testfile-03-12-2023 14-51-34.xlsx  testfile-03-12-2023 15-17-08.xlsx
